update deps + fix layout issues

--- a/theme/layout.scss
+++ b/theme/layout.scss
@@ -10,6 +10,10 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+.control-panel {
+  max-height: 66%;
+}
+
 .monospace {
   font-family: 'Consolas', 'Liberation Mono', 'Monaco', 'Lucida Console', monospace;
 }
